This documents significant changes in the 1.0 branch of ksh 93u+m.
For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.

2024-01-21:

- A bug was fixed that caused both the 'set' and 'get'/'getn' discipline
  functions of a variable to be triggered when performing an assignment in
  an arithmetic expression; only the 'set' discipline is now triggered when
  assigning (as was always the documented behaviour). This applies to the
  shell's internal disciplines as well. For example, $RANDOM is no longer
  spuriously read from while seeding it via an arithmetic expression.

- Fixed: assigning to LINENO, RANDOM, or _ via an arithmetic expression gave
  undefined results on systems where sizeof(long double)!=sizeof(double).

2024-01-16:

- Fixed a parsing bug in array subscripts containing '=' in combination with
  a declaration command (such as 'typeset' or 'export'). For instance,
  'typeset -A arr; typeset -i arr[foo=bar]=123' now works correctly.

2024-01-15:

- Fixed a bug, introduced in ksh93q+ 2005-05-22, that stopped an append
  assignment from working together with a declaration command. For example,
  'typeset var+=value' or 'export var+=value' now again work as expected.

2024-01-14:

- Fixed a regression introduced on 2022-11-01 that caused ksh to enter
  an infinite loop after using the up arrow in emacs mode with an empty
  history file.

- Fixed a bug in 'read -s': in a script, the first invocation of that
  command, with the emacs or vi shell option on, did not allow the user to
  navigate through the shell history file.

2024-01-11:

- Fixed ancient incorrect behaviour in the 'kill' built-in: it sent SIGCONT
  to the given process along with every other non-SIGCONT signal issued,
  causing a stopped process to be incorrectly resumed upon sending it any
  signal and causing any SIGCONT trap handler to be incorrectly triggered.
